--- a/src/pages/Lessons/index.html
+++ b/src/pages/Lessons/index.html
@@ -19,6 +19,10 @@
         <a href="/pages/Lesson2-2/index.html">Lesson2-2</a>
         <a href="/pages/Lesson2-3/index.html">Lesson2-3</a>
         <a href="/pages/Lesson2-4/index.html">Lesson2-4</a>
+        <a href="/pages/Lesson3-1/index.html">Lesson3-1</a>
+        <a href="/pages/Lesson3-2/index.html">Lesson3-2</a>
+        <a href="/pages/Lesson3-3/index.html">Lesson3-3</a>
+        <a href="/pages/Lesson3-4/index.html">Lesson3-4</a>
     </main>      
     <script src="scripts.js"></script>
   </body>
