Отверстал первую страницу

--- a/src/pages/Lessons/index.html
+++ b/src/pages/Lessons/index.html
@@ -23,6 +23,7 @@
         <a href="/pages/Lesson3-2/index.html">Lesson3-2</a>
         <a href="/pages/Lesson3-3/index.html">Lesson3-3</a>
         <a href="/pages/Lesson3-4/index.html">Lesson3-4</a>
+        <a href="/pages/Lesson4/index.html">Lesson4</a>
     </main>      
     <script src="scripts.js"></script>
   </body>
