--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -6,6 +6,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link href="/common.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/static/fonts/oswald.css" />
@@ -27,6 +29,7 @@
     @@include('modal/send-message-modal.html')
     @@include('mobile-menu/index.html')
     <a href="/pages/Lessons/index.html">Lessons</a>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
