My profile page

--- a/src/pages/my-profile/index.html
+++ b/src/pages/my-profile/index.html
@@ -18,7 +18,10 @@
     <main>
         @@include('profile/index.html')
     </main>
-    @@include('mobile-menu/index.html')
+    @@include('mobile-menu/index.html')  
+    @@include('profile-editing/editing-password.html')  
+    @@include('profile-editing/editing-data.html')  
     <script src="scripts.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
