--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -30,6 +30,7 @@
     @@include('mobile-menu/index.html')
     <a href="/pages/Lessons/index.html">Lessons</a>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="/build/static/d/d.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
