--- a/src/pages/my-blog/index.html
+++ b/src/pages/my-blog/index.html
@@ -19,6 +19,7 @@
         @@include('filter/index.html')
         @@include('search-bar/index.html')
         @@include('blog/index.html')
+        @@include('blog-pagination/index.html')
     </main>
     @@include('footer/index.html')
     @@include('mobile-menu/index.html')
