Blog filter form interaction

--- a/src/pages/my-blog/index.html
+++ b/src/pages/my-blog/index.html
@@ -17,12 +17,13 @@
     @@include('header/index.html') 
     <main>
         @@include('filter/index.html')
-        @@include('search-bar/index.html')
         @@include('blog/index.html')
         @@include('blog-pagination/index.html')
     </main>
     @@include('footer/index.html')
     @@include('mobile-menu/index.html')
+    @@include('button-scroll/index.html')
     <script src="scripts.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
