--- a/src/pages/my-blog/index.html
+++ b/src/pages/my-blog/index.html
@@ -23,7 +23,7 @@
     @@include('footer/index.html')
     @@include('mobile-menu/index.html')
     @@include('button-scroll/index.html')
-    <script src="scripts.js"></script>
+    <script src="../main/scripts.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
